[package]

name = "ForcedFracture"
version = "0.0.1"
authors = ["walter"]

[dev-dependencies.FracEngine]
path = "../FracEngine"

[dependencies]
gl = "*"
libc = "*"
glutin = "*"
#glium = "*"


[dependencies.glium]
git = "https://github.com/tomaka/glium"

#[dependencies.glutin]
#git = "https://github.com/tomaka/glutin"
